manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ahoy-kirk-chat
  namespace: kirk
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ahoy-kirk-chat
  template:
    metadata:
      labels:
        app: ahoy-kirk-chat
    spec:
      containers:
        - name: ahoy-chat
          image: ttl.sh/ahoy-chat:init
          resources:
              limits:
                memory: "128Mi"
                cpu: "500m"
          ports: 
    app: ahoy-kirk-chat
        - name: redis
          image: redis:alpine
          ports: 
            - containerPort: 6379
              name: redis-port
---
apiVersion: v1
kind: Service
metadata:
  name: ahoy-kirk-redis-service
  namespace: kirk
spec:
  selector:
    app: ahoy-kirk-redis
  ports:
    - name: ahoy-kirk-redis-service-port
      port: 6379
      targetPort: redis-port
---
apiVersion: v1
kind: Service
metadata:
  name: ahoy-kirk-chat-service
  namespace: kirk
spec:
  selector:
    app: ahoy-kirk-chat
  ports:
    - name: http
      port: 4444
      targetPort: chat-port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
  name: ahoy-kirk-ingress
  namespace: kirk
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kirk.ahoy.wiseflow.io
    secretName: ahoy-kirk-secret
  rules:
  - host: kirk.ahoy.wiseflow.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ahoy-kirk-chat-service
            port:
              name: http
